[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = {workspace = true}
solana-gossip = {workspace = true}
solana-net-utils = {workspace = true}
solana-sdk = {workspace = true}
solana-streamer = {workspace = true}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"